debug code and tests